# StockfishForFlutter

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/loloof64/stockfish_for_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: stockfish_for_flutter.podspec
ios/Classes/: stockfish_for_flutter.c
lib/: stockfish.dart
lib/stockfish/: ffi.dart  stockfish_for_flutter.dart  stockfish_for_flutter_bindings_generated.dart  stockfish_state.dart
src/: CMakeLists.txt  stockfish_for_flutter.cpp  stockfish_for_flutter.h
src/stockfish/: evaluate.h
